beta/css/style.css
@font-face {
  font-family: 'Sofia Pro';
  font-style: normal;
  font-weight: 100;
  src: local('Sofia Pro'),
       url('/fonts/2FF32C_3_0.woff2') format('woff2'),
       url('/fonts/2FF32C_3_0.woff') format('woff'),
       url('/fonts/2FF32C_3_0.ttf') format('ttf'),
       url('/fonts/2FF32C_3_0.eot') format('eot');
}
@font-face {
  font-family: 'Sofia Pro';
  font-style: normal;
  font-weight: 500;
  src: local('Sofia Pro'),
       url('/fonts/2FF32C_2_0.woff2') format('woff2'),
       url('/fonts/2FF32C_2_0.woff') format('woff'),
       url('/fonts/2FF32C_2_0.ttf') format('ttf'),
       url('/fonts/2FF32C_2_0.eot') format('eot');
}
@font-face {
  font-family: 'Sofia Pro';
  font-style: italic;
  font-weight: 100;
  src: local('Sofia Pro'),
       url('/fonts/2FF32C_1_0.woff2') format('woff2'),
       url('/fonts/2FF32C_1_0.woff') format('woff'),
       url('/fonts/2FF32C_1_0.ttf') format('ttf'),
       url('/fonts/2FF32C_1_0.eot') format('eot');
}
@font-face {
  font-family: 'Sofia Pro';
  font-style: italic;
  font-weight: 500;
  src: local('Sofia Pro'),
       url('/fonts/2FF32C_0_0.woff2') format('woff2'),
       url('/fonts/2FF32C_0_0.woff') format('woff'),
       url('/fonts/2FF32C_0_0.ttf') format('ttf'),
       url('/fonts/2FF32C_0_0.eot') format('eot');
}
@import url(https://fonts.googleapis.com/css?family=Karla:400,700);

html{
}

#eyepeice{
  width: 100%;
  height: 100vh;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
}

#background{
  width: 100%;
  height: 100vh;
  position: absolute;
  z-index: -2;
  top: 0;
  left: 0;
  text-overflow: clip;
  background: -webkit-radial-gradient(rgba(0,0,0,1) 0, rgba(0,0,0,1) 8%, rgba(0,0,0,0) 9%, rgba(0,0,0,0) 100%);
  background: radial-gradient(rgba(0,0,0,1) 0, rgba(0,0,0,1) 8%, rgba(0,0,0,0) 9%, rgba(0,0,0,0) 100%);
  background-origin: padding-box;
  background-clip: border-box;
  background-size: 60px 60px;
  -webkit-box-shadow: none;
  box-shadow: none;
  text-shadow: none;
  -webkit-transition: none;
  transition: none;
  -webkit-transform: none;
  transform: none;
  -webkit-transform-origin: 50% 50% 0;
  transform-origin: 50% 50% 0;
}

body {
  font-size: 16px;
}

.wrapper {
  padding: 70px; }

#mc_embed_signup{
  background-color: white;
  padding: 20px;
  padding-top: 10px;
  max-width: 300px;
}

#mce-FNAME, #mce-LNAME, .input-group, .subscribe_button, .company{
  transition: all 0.5s ease;
}

.company{
  height: 50px;
}

.hidden{
  opacity: 0 !important;
  height: 0px !important;
}

h1, h2, li a, p, button, #Email-error, .text {
  font-family: 'Sofia Pro', -apple-system, ".SFNSDisplay-Regular", "Segoe UI", "Roboto", sans-serif;
  font-weight: normal;
  color: black;
  margin: 0; }

h1, button {
  font-size: 1.5rem; }

h2, #Email-error, #ButtonSubmit {
  font-size: 1rem; }

p, label {
  line-height: 1.4rem;
  font-family: 'Karla', sans-serif;}

li {
  text-decoration: none;
  list-style: none;
  display: inline-block; }

.input-group{
  margin-top: 10px;
}

.input-group ul {
  margin-top: 10px;
  margin-bottom: 0;
  padding: 0;
}

.input-group ul li{
  width: 47%;
  margin-right: 2%
}

.input-group ul li label {
  cursor: pointer;
}

.input-group ul li:hover label{
  background-color: rgba(0, 0, 0, 0.2);
  border-color: transparent;
}


a {
  font-size: 1.2rem;
  text-decoration: none; }

a:hover {
  border-bottom: 2px solid black;
  padding-bottom: 3px; }

p a {
  font-size: 1rem;
  color: black; }

.desc {
  margin-top: 40px;
  max-width: 320px;
  padding: 20px;
  padding-bottom: 0;
  background-color: white;}

#logo{
  width: 200px;
  background-color: white;
  padding: 20px;
}

#Email-error {
  display: block;
  position: absolute;
  color: #c84637;
  margin-top: 2px; }

input[type=text], input[type=email], input[type=submit], button {
  font-family: 'Karla', -apple-system, ".SFNSDisplay-Regular", "Segoe UI", sans-serif;
  color: black;
  font-size: 1rem;
  margin: 0;
  border: none;
  overflow: auto;
  outline: none;
  background-color: transparent; }

::-webkit-input-placeholder {
  color: rgba(0, 0, 0, 0.5); }

input[type=text], input[type=email], input[type=submit] {
  width: 100%;
  margin: 10px 0;
  border-bottom: 2px solid black;
  border-bottom-color: rgba(0, 0, 0, 0.2);
  transition: 0.3s ease all;
  -moz-transition: 0.3s ease all;
  -webkit-transition: 0.3s ease all; }

input[type=submit]{
  border: 2px solid black;
  border-color: rgba(0, 0, 0, 0.2);
  padding: 10px 0;
}

input[type=text]:focus, input[type=email]:focus {
  border-bottom-color: rgba(0, 0, 0, 1);
  }

input[type=radio] {
    display:none;
    margin:10px;
}

input[type=radio] + label {
    display:inline-block;
    padding: 6px 0;
    width: 100%;
    text-align: center;
    border: 2px solid black;
    border-color: rgba(0, 0, 0, 0.2);
}

input[type=radio]:checked + label {
   background-image: none;
    background-color:#d0d0d0;
}

button {
  display: inline-block;
  opacity: 0;
  padding: 0;
  cursor: pointer;
  position: relative;
  top: 16px;
  float: right;
  transition: 0.2s ease all;
  -moz-transition: 0.2s ease all;
  -webkit-transition: 0.2s ease all; }

.disabled {
  opacity: 0.5;
  cursor: default;
  text-decoration: none !important; }

.bottom {
  position: fixed;
  bottom: 70px;
  left: 70px;
  width: calc(100% - 140px); }

.info {
  padding: 0;
  margin: 0;
  padding: 20px;
  list-style: none;
  -ms-box-orient: horizontal;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -moz-flex;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between; }

.bar {
  position: relative;
  display: block;
  width: 100%; }

.bar:before, .bar:after {
  content: "";
  height: 2px;
  width: 0;
  bottom: 0;
  position: absolute;
  background: black;
  transition: 0.5s ease all;
  -moz-transition: 0.5s ease all;
  -webkit-transition: 0.5s ease all; }

input:focus ~ .bar:before, input:focus ~ .bar:after {
  width: 100%; }

.shape {
  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
  transition-delay: 0.1s;
  stroke-dasharray: 140 540;
  stroke-dashoffset: -474;
  stroke-width: 4px;
  fill: transparent;
  stroke: black;
  border-bottom: 5px solid black; }

.text {
  position: relative;
  top: -28px;
  font-size: 1rem; }

button:hover svg {
  background: black; }

button:hover .text {
  color: #A5A5A5; }

input:focus ~ button .svg-wrapper .shape {
  stroke-width: 4px;
  stroke-dashoffset: 0;
  stroke-dasharray: 760; }

@media (max-width: 960px) {
  h1 {
    margin-bottom: 55vh; }

  li, .info {
    display: block; }

  li {
    margin: 10px 0; }

  a {
    border-bottom: 2px solid black;
    padding-bottom: 2px; }

  .bottom {
    position: inherit;
    width: 100%; }

  .wrapper {
    padding: 20px; }

  input, .bar, input:focus {
    width: 100%;
    -webkit-appearance: none;
    -webkit-border-radius: 0;
    border-radius: 0;
    padding-left: 0; }

  button {
    display: block; }

  button, .svg-wrapper, .shape, svg {
    width: 100%;
    padding: 0;
    height: 50px; }

  .text {
    top: -38px; }

  button svg {
    background: black; }

  button .text {
    color: #A5A5A5; }

  p:first-of-type {
    margin-top: 80px; }

  .input-group p{
    margin-top: 0; }

  .input-group ul li{
    width: 100%;
  }
  .mc_embed_signup{
    max-width: 100%;
  }
}
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  button {
    top: 16px; } }

/*# sourceMappingURL=style.css.map */

